--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ test {
 
 dependencies {
     implementation(
-            'io.vavr:vavr:0.9.2'
+            'io.vavr:vavr:0.9.3'
     )
 
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
@@ -29,10 +29,11 @@ dependencies {
     testImplementation(
             "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}",
             "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}",
-            'org.assertj:assertj-core:3.11.1'
+            'org.assertj:assertj-core:3.11.1',
+            'org.assertj:assertj-vavr:0.0.1'
     )
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
 
-wrapper.gradleVersion = '4.10.2'
+wrapper.gradleVersion = '5.1.1'
